# situational-task-5

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
sensor/: models.py  serializers.py  tests.py  urls.py  views.py
sensor/alert/: apps.py  models.py  serializers.py  urls.py  views.py
sensor/alert/migrations/: 0001_initial.py
sensor/data/: apps.py  models.py  serializers.py  urls.py  views.py
sensor/data/migrations/: 0001_initial.py  0002_rename_co_2_level_sensordata_humidity_and_more.py
sensor/migrations/: 0001_initial.py
user/: models.py  serializers.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py
